# restful-projects-api

./: .gitignore  README.md  pyproject.toml
src/app/: database.py  main.py  models.py  schemas.py
src/app/repositories/: project_repo.py
src/app/routers/: projects.py
src/app/services/: project_service.py
tests/: conftest.py  test_projects_crud.py  test_validation.py
